@@ -1,2 +1,2 @@
-VERSION=2.02.01
+VERSION=2.02.02
 YEARS=2005-2009
