@@ -1,6 +1,10 @@
 #!/bin/bash
 PROJECT=bobcat
 
+if [ -e /usr/share/common-licenses/GPL ] ; then
+    cp /usr/share/common-licenses/GPL ${PROJECT}/LICENSE
+fi
+
 . ${PROJECT}/VERSION                    # load the version
 
 DISTRIBUTION=${PROJECT}-${VERSION}      # define the distribution's dir name
@@ -8,10 +12,8 @@ DISTRIBUTION=${PROJECT}-${VERSION}      # define the distribution's dir name
 tgz()
 {
     ln -s ${PROJECT} ${DISTRIBUTION}        # distribution's dir name
-
     tar czvf $1 --exclude-from=excluded  ${DISTRIBUTION}/*
-
-    rm ${DISTRIBUTION}                      # rm the link
+    rm ${DISTRIBUTION} ${PROJECT}/LICENSE  # rm the link/LICENSE file
 }
 
 case "$1" in 
