@@ -1,4 +1,6 @@
-bobcat (2.02.01)
+bobcat (2.02.02) (TO DO)
+
+  * Repaired DST and extraction bugs in DateTime
 
   * OFoldStreambuf's inheritance tree now places the OFilterStreambuf ahead of
     the std::ostream class to prevent strange run-time problems on Macs.
@@ -12,7 +14,10 @@ bobcat (2.02.01)
 
   * Cosmetic changes to INSTALL, INSTALL.im and icmake/install
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 24 Mar 2009 12:39:06 +0100
+  * Replaces and extends intermediate release 2.02.01 only made available at
+    SourceForge 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 31 Mar 2009 12:40:40 +0200
 
 bobcat (2.01.1)
 
